package edu.nju.jap.mapper;

import edu.nju.jap.model.po.AnnotationPo;
import org.apache.ibatis.annotations.Mapper;
import org.apache.ibatis.annotations.Param;

@Mapper
public interface AnnotationMapper {
    String RECORD_ANNOTATION = "ANNOTATION";
    String RECORD_ARBITRATION = "ARBITRATION";

    AnnotationPo selectByScope(@Param("taskId") long taskId, @Param("documentId") long documentId,
                               @Param("userId") long userId, @Param("recordType") String recordType);

    int insert(AnnotationPo annotation);

    int updateStatus(AnnotationPo annotation);

    int updateLayout(@Param("id") long id, @Param("layoutJson") String layoutJson);

    int deleteById(@Param("id") long id);

    int deleteByTaskId(@Param("taskId") int taskId);

    int countSubmittedByTaskDocument(@Param("taskId") int taskId, @Param("documentId") int documentId);
}
